@@ -20,6 +20,7 @@ from .._version import version as __version__
 
 from .api import get_ckan_api
 from .preferences import PreferencesDialog
+from .status_widget import StatusWidget
 from .wizard import SetupWizard
 
 # set Qt icon theme search path
@@ -100,21 +101,6 @@ class DCORAid(QtWidgets.QMainWindow):
         self.status_widget = StatusWidget(self)
         self.tabWidget.setCornerWidget(self.status_widget)
         self.status_widget.clicked.connect(self.dlg_pref.on_show_server)
-        self.status_widget.clicked.connect(self.refresh_login_status)
-        if bool(int(self.settings.value("debug/without timers", "0"))):
-            # Only do it once during init (init takes longer)
-            self.refresh_login_status()
-            self.timer = None
-        else:
-            # Call refresh_login status regularly
-            self.timer = QtCore.QTimer(self)
-            self.timer.timeout.connect(self.refresh_login_status)
-            self.timer.start(300000)
-            # Refresh login status with background timer once
-            self.single_shot_timer = QtCore.QTimer(self)
-            self.single_shot_timer.setSingleShot(True)
-            self.single_shot_timer.timeout.connect(self.refresh_login_status)
-            self.single_shot_timer.start(1000)
 
         # Signals for user datasets (my data)
         self.pushButton_user_refresh.clicked.connect(
@@ -142,8 +128,6 @@ class DCORAid(QtWidgets.QMainWindow):
         self.raise_()
 
     def close(self):
-        if self.timer is not None:
-            self.timer.stop()
         if self.panel_upload.widget_jobs.timer is not None:
             self.panel_upload.widget_jobs.timer.stop()
         super(DCORAid, self).close()
@@ -228,102 +212,6 @@ class DCORAid(QtWidgets.QMainWindow):
     def on_wizard(self):
         self.wizard = SetupWizard(self)
         self.wizard.exec_()
-
-    @QtCore.pyqtSlot()
-    def refresh_login_status(self):
-        api = get_ckan_api()
-
-        if not api.is_available():
-            text = "No connection"
-            tip = f"Can you access {api.server} via a browser?"
-            icon = "hourglass"
-        elif not api.is_available(with_correct_version=True):
-            text = "Server out of date"
-            tip = "Please downgrade DCOR-Aid"
-            icon = "ban"
-        elif not api.api_key:
-            text = "Anonymous"
-            tip = "Click here to enter your API key."
-            icon = "user"
-        elif not api.is_available(with_api_key=True):
-            text = "API token incorrect"
-            tip = "Click here to update your API key."
-            icon = "user-times"
-        else:
-            try:
-                user_data = api.get_user_dict()
-            except ConnectionTimeoutErrors:
-                text = "Connection timeout"
-                tip = f"Can you access {api.server} via a browser?"
-                icon = "hourglass"
-            else:
-                fullname = user_data["fullname"]
-                name = user_data["name"]
-                if not fullname:
-                    fullname = name
-                text = "{}".format(fullname)
-                tip = "user '{}'".format(name)
-                icon = "user-lock"
-        try:
-            self.status_widget.set_status(text=text,
-                                          tooltip=tip,
-                                          icon=icon,
-                                          server=api.server)
-        except BaseException:
-            # Probably application killed
-            pass
-
-
-class StatusWidget(QtWidgets.QWidget):
-    clicked = QtCore.pyqtSignal()
-
-    def __init__(self, *args, **kwargs):
-        super(StatusWidget, self).__init__(*args, **kwargs)
-        self.layout = QtWidgets.QHBoxLayout(self)
-        self.layout.setContentsMargins(0, 0, 0, 0)
-        self.layout.setSpacing(0)
-
-        self.flabel = QtWidgets.QLabel(self)
-        self.layout.addWidget(self.flabel)
-
-        self.toolButton_user = QtWidgets.QToolButton()
-        self.toolButton_user.setText("Initialization...")
-        self.toolButton_user.setToolButtonStyle(
-            QtCore.Qt.ToolButtonTextBesideIcon)
-        self.toolButton_user.setAutoRaise(True)
-        self.layout.addWidget(self.toolButton_user)
-        self.toolButton_user.clicked.connect(self.clicked)
-
-    @staticmethod
-    def get_favicon(server):
-        dldir = pathlib.Path(
-            QtCore.QStandardPaths.writableLocation(
-                QtCore.QStandardPaths.AppDataLocation)) / "favicons"
-
-        dldir.mkdir(exist_ok=True, parents=True)
-        favname = dldir / (server.split("://")[1] + "_favicon.ico")
-        if not favname.exists():
-            try:
-                r = requests.get(server + "/favicon.ico", timeout=3.05)
-                if r.ok:
-                    with favname.open("wb") as fd:
-                        fd.write(r.content)
-                else:
-                    raise ValueError("No favicon!")
-                favicon = QtGui.QIcon(str(favname))
-            except BaseException:
-                favicon = QtGui.QIcon()
-        else:
-            favicon = QtGui.QIcon(str(favname))
-        return favicon
-
-    def set_status(self, text, tooltip, icon, server):
-        favicon = self.get_favicon(server)
-        self.flabel.setPixmap(favicon.pixmap(16, 16))
-        self.flabel.setToolTip(server)
-        self.toolButton_user.setText(text)
-        self.toolButton_user.setToolTip(tooltip)
-        self.toolButton_user.setIcon(QtGui.QIcon.fromTheme(icon))
 
 
 def excepthook(etype, value, trace):
