@@ -4,6 +4,7 @@
  - enh: add with_api_key and with_correct_version keyword arguments to
    CKANAPI.is_available
  - ref: do not update login status asyncronously in the background
+ - ref: new status_widget submodule
  - setup: DCOR-Aid 0.10.0 requires CKAN 2.9.4 on the server side
 0.9.2
  - ci: turn tests into a submodule
